--- a/starter/critter/pom.xml
+++ b/starter/critter/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+
+		<dependency>
+			<groupId>org.modelmapper.extensions</groupId>
+			<artifactId>modelmapper-spring</artifactId>
+			<version>2.4.1</version>
+		</dependency>
     </dependencies>
 
 	<build>
