--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 # Server port is arbitrary
 server.port=8082
-
 # Data Source Setup
 # Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
 #       and provide the credentials below to access it
-spring.datasource.url=jdbc:mysql://localhost:3306/critter?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/critter
 spring.datasource.username=root
 spring.datasource.password=root
-# uncomment the below lines to view sql output in console
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
 
-spring.jpa.hibernate.ddl-auto=create
+# uncomment the below lines to view sql output in console
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
