--- a/starter/critter/src/test/resources/application.properties
+++ b/starter/critter/src/test/resources/application.properties
@@ -1,5 +1,11 @@
+# H2 Database configuration for testing
 spring.datasource.url=jdbc:h2:mem:critter
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Enable SQL output in tests if you want
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
